--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
         <meta charset="utf-8">
         <title>Chronicles of Mathematica</title>
 
-        <link rel="stylesheet" type="text/css" href="/css/app.css">
+        <link rel="stylesheet" type="text/css" href="css/app.css">
+        <link href="https://fonts.googleapis.com/css?family=Lalezar&display=swap" rel="stylesheet">
+
     </head>
     <body>
         <script type="text/javascript" src="javascript/app.js">
-            
+
         </script>
+
+        <header>
+            <div id="overlay">
+                <div id="text">Chronicles of Mathematica</div>
+            </div>
+        </header>
     </body>
 </html>
