Brand New Navigation

--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width", initial-scale=1.0>
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Chronicles of Mathematica</title>
 
         <link rel="stylesheet" type="text/css" href="css/app.css">
         <link href="https://fonts.googleapis.com/css?family=Lalezar&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,700,900,900i&display=swap" rel="stylesheet">
+
 
     </head>
     <body>
@@ -14,8 +19,32 @@
         </script>
 
         <header>
-            <div id="overlay">
+            <!-- <div id="overlay">
                 <div id="text">Chronicles of Mathematica</div>
+            </div>
+            <div class="topnav">
+                <a href="#about">About</a>
+                <a class="active" href="#home">Home</a>
+            </div> -->
+
+            <div class="container">
+                <nav>
+                    <input type="checkbox" id="nav" class="hidden">
+                    <label for="nav" class="nav-btn">
+                        <i></i>
+                        <i></i>
+                        <i></i>
+                    </label>
+                    <div class="logo">
+                        <a href="#">Chronicles of Mathematica</a>
+                    </div>
+                    <div class="nav-wrapper">
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About</a></li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
         </header>
     </body>
