--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
         <title>Chronicles of Mathematica</title>
 
         <link rel="stylesheet" type="text/css" href="css/app.css">
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="javascript/Fading.js"></script>
+
+        <!-- Google fonts -->
         <link href="https://fonts.googleapis.com/css?family=Lalezar&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,700,900,900i&display=swap" rel="stylesheet">
+        <!-- Quill editor -->
+        <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 
 
     </head>
     <body>
-        <script type="text/javascript" src="javascript/app.js">
-
-        </script>
-
         <header>
             <!-- <div id="overlay">
                 <div id="text">Chronicles of Mathematica</div>
@@ -46,8 +48,20 @@
                     </div>
                 </nav>
             </div>
-
-            
         </header>
+        <p> <br> </p>
+
+        <!-- Editor container -->
+        <!-- <div id="editor">
+          <p>Hello World!</p>
+          <p>Some initial <strong>bold</strong> text</p>
+          <p><br></p>
+        </div>
+
+        <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+        <script src="javascript/Quill.js"></script> -->
+
+        <section></section>
+        <section></section>
     </body>
 </html>
