--- a/index.html
+++ b/index.html
@@ -21,14 +21,6 @@
     </head>
     <body>
         <header>
-            <!-- <div id="overlay">
-                <div id="text">Chronicles of Mathematica</div>
-            </div>
-            <div class="topnav">
-                <a href="#about">About</a>
-                <a class="active" href="#home">Home</a>
-            </div> -->
-
             <div class="container">
                 <nav>
                     <input type="checkbox" id="nav" class="hidden">
@@ -60,6 +52,10 @@
 
         <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
         <script src="javascript/Quill.js"></script> -->
+
+        <div id="overlay">
+
+        </div>
 
         <section></section>
         <section></section>
