--- a/index.html
+++ b/index.html
@@ -43,6 +43,19 @@
         </header>
         <p> <br> </p>
 
+        <div class="res-cards">
+            <div class="rowX">
+                <div class="cardX">
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="card">
+
+                </div>
+            </div>
+        </div>
+
         <section></section>
         <section></section>
     </body>
