Images and Cards

--- a/index.html
+++ b/index.html
@@ -46,7 +46,16 @@
         <div class="res-cards">
             <div class="rowX">
                 <div class="cardX">
-
+                    <img src="assets\638579-POK0NK-391.jpg" alt="Cover" style="object-fit:cover;
+                    width: 100%;
+                    height: 100%;
+                    border-top-left-radius: 5px;
+                    border-bottom-left-radius: 5px;
+                    border-top-right-radius: 5px;
+                    border-bottom-right-radius: 5px;">
+                    <div class="top-right">
+                        <p>Sample Text</p>
+                    </div>
                 </div>
             </div>
             <div class="row">
