--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                         <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About</a></li>
+                            <li><a href="feedback.html">Feedback</a></li>
+                            <li><a href="extras.html">Extras</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -53,9 +55,6 @@
                     border-bottom-left-radius: 5px;
                     border-top-right-radius: 5px;
                     border-bottom-right-radius: 5px;">
-                    <div class="top-right">
-                        <p>Sample Text</p>
-                    </div>
                 </div>
             </div>
             <div class="row">
