--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
         <link href="https://fonts.googleapis.com/css?family=Lalezar&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,700,900,900i&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700,900&display=swap" rel="stylesheet">
         <!-- Quill editor -->
         <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-
-
     </head>
     <body>
         <header>
@@ -30,7 +29,7 @@
                         <i></i>
                     </label>
                     <div class="logo">
-                        <a href="#">Chronicles of Mathematica</a>
+                        <a href="index.html">Chronicles of Mathematica</a>
                     </div>
                     <div class="nav-wrapper">
                         <ul>
@@ -57,24 +56,13 @@
                     border-bottom-right-radius: 5px;">
                 </div>
             </div>
-            <div class="row">
-                <div class="card">
-
+            <div class="rowO">
+                <div class="cardB">
+                    <p>Topics from the Syllabus</p>
                 </div>
             </div>
         </div>
-
         <section></section>
         <section></section>
     </body>
 </html>
-
-<!-- Editor container -->
-<!-- <div id="editor">
-  <p>Hello World!</p>
-  <p>Some initial <strong>bold</strong> text</p>
-  <p><br></p>
-</div>
-
-<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-<script src="javascript/Quill.js"></script> -->
