--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,700,900,900i&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700,900&display=swap" rel="stylesheet">
-        <!-- Quill editor -->
-        <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+
     </head>
     <body>
         <header>
@@ -59,6 +58,39 @@
             <div class="rowO">
                 <div class="cardB">
                     <p>Topics from the Syllabus</p>
+                </div>
+            </div>
+            <div class="rowK">
+                <div class="column">
+                    <div class="subCard">
+                        <p class="title">Algebra</p>
+
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="subCard">
+                        <p class="title">Functions and Equations</p>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="subCard">
+                        <p class="title">Trigonometry</p>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="subCard">
+                        <p class="title">Vectors</p>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="subCard">
+                        <p class="title">Statistics and Probablity</p>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="subCard">
+                        <p class="title">Calculus</p>
+                    </div>
                 </div>
             </div>
         </div>
