Update Card color

--- a/index.html
+++ b/index.html
@@ -62,34 +62,34 @@
             </div>
             <div class="rowK">
                 <div class="column">
-                    <div class="subCard">
-                        <p class="title">Algebra</p>
+                    <div class="subCard" id="one">
+                        <p>Algebra</p>
 
                     </div>
                 </div>
                 <div class="column">
-                    <div class="subCard">
-                        <p class="title">Functions and Equations</p>
+                    <div class="subCard" id="two">
+                        <p>Functions and Equations</p>
                     </div>
                 </div>
                 <div class="column">
-                    <div class="subCard">
-                        <p class="title">Trigonometry</p>
+                    <div class="subCard" id="three">
+                        <p>Trigonometry</p>
                     </div>
                 </div>
                 <div class="column">
-                    <div class="subCard">
-                        <p class="title">Vectors</p>
+                    <div class="subCard" id="four">
+                        <p>Vectors</p>
                     </div>
                 </div>
                 <div class="column">
-                    <div class="subCard">
-                        <p class="title">Statistics and Probablity</p>
+                    <div class="subCard" id="five">
+                        <p>Statistics and Probablity</p>
                     </div>
                 </div>
                 <div class="column">
-                    <div class="subCard">
-                        <p class="title">Calculus</p>
+                    <div class="subCard" id="six">
+                        <p>Calculus</p>
                     </div>
                 </div>
             </div>
