--- a/index.html
+++ b/index.html
@@ -63,33 +63,32 @@
             <div class="rowK">
                 <div class="column">
                     <div class="subCard" id="one">
-                        <p>Algebra</p>
-
+                        <h4><b>Algebra</b></h4>
                     </div>
                 </div>
                 <div class="column">
                     <div class="subCard" id="two">
-                        <p>Functions and Equations</p>
+                        <h4><b>Functions and Equations</b></h4>
                     </div>
                 </div>
                 <div class="column">
                     <div class="subCard" id="three">
-                        <p>Trigonometry</p>
+                        <h4><b>Trigonometry</b></h4>
                     </div>
                 </div>
                 <div class="column">
                     <div class="subCard" id="four">
-                        <p>Vectors</p>
+                        <h4><b>Vectors</b></h4>
                     </div>
                 </div>
                 <div class="column">
                     <div class="subCard" id="five">
-                        <p>Statistics and Probablity</p>
+                        <h4><b>Statistics and Probability</b></h4>
                     </div>
                 </div>
                 <div class="column">
                     <div class="subCard" id="six">
-                        <p>Calculus</p>
+                        <h4><b>Calculus</b></h4>
                     </div>
                 </div>
             </div>
