--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Chronicles of Mathematica</title>
 
         <link rel="stylesheet" type="text/css" href="css/app.css">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="javascript/Fading.js"></script>
 
@@ -43,7 +44,7 @@
         </header>
         <p> <br> </p>
 
-        <div class="res-cards">
+        <section class="res-cards">
             <div class="rowX">
                 <div class="cardX">
                     <img src="assets\638579-POK0NK-391.jpg" alt="Cover" style="object-fit:cover;
@@ -60,39 +61,42 @@
                     <p>Topics from the Syllabus</p>
                 </div>
             </div>
-            <div class="rowK">
+            <!-- Cards -->
+            <div class="row">
                 <div class="column">
-                    <div class="subCard" id="one">
+                    <div class="card" id="one">
                         <h4><b>Algebra</b></h4>
                     </div>
                 </div>
                 <div class="column">
-                    <div class="subCard" id="two">
-                        <h4><b>Functions and Equations</b></h4>
+                    <div class="card" id="two">
+                        <h4><b>Fucntions and Equations</b></h4>
                     </div>
                 </div>
                 <div class="column">
-                    <div class="subCard" id="three">
+                    <div class="card" id="three">
                         <h4><b>Trigonometry</b></h4>
                     </div>
                 </div>
+            </div>
+            <div class="row">
                 <div class="column">
-                    <div class="subCard" id="four">
+                    <div class="card" id="four">
                         <h4><b>Vectors</b></h4>
                     </div>
                 </div>
                 <div class="column">
-                    <div class="subCard" id="five">
+                    <div class="card" id="five">
                         <h4><b>Statistics and Probability</b></h4>
                     </div>
                 </div>
                 <div class="column">
-                    <div class="subCard" id="six">
+                    <div class="card" id="six">
                         <h4><b>Calculus</b></h4>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <section></section>
         <section></section>
     </body>
