--- a/index.html
+++ b/index.html
@@ -46,19 +46,23 @@
 
         <section class="res-cards">
             <div class="rowX">
-                <div class="cardX">
-                    <img src="assets\638579-POK0NK-391.jpg" alt="Cover" style="object-fit:cover;
-                    width: 100%;
-                    height: 100%;
-                    border-top-left-radius: 5px;
-                    border-bottom-left-radius: 5px;
-                    border-top-right-radius: 5px;
-                    border-bottom-right-radius: 5px;">
+                <div class="columnx">
+                    <div class="cardX">
+                        <img src="assets\638579-POK0NK-391.jpg" alt="Cover" style="object-fit:cover;
+                        width: 100%;
+                        height: 100%;
+                        border-top-left-radius: 5px;
+                        border-bottom-left-radius: 5px;
+                        border-top-right-radius: 5px;
+                        border-bottom-right-radius: 5px;">
+                    </div>
                 </div>
             </div>
             <div class="rowO">
-                <div class="cardB">
-                    <p>Topics from the Syllabus</p>
+                <div class="columnB">
+                    <div class="cardB">
+                        <p>Topics from the Syllabus</p>
+                    </div>
                 </div>
             </div>
             <!-- Cards -->
