--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 
         <link rel="stylesheet" type="text/css" href="css/app.css">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="javascript/Fading.js"></script>
         <script type="text/javascript" src="javascript/app.js"></script>
-        <script type="text/javascript" src="javascript/hover.js"></script>
 
         <!-- Google fonts -->
         <link href="https://fonts.googleapis.com/css?family=Lalezar&display=swap" rel="stylesheet">
@@ -49,13 +48,15 @@
             <div class="rowX">
                 <div class="columnx">
                     <div class="cardX">
-                        <img src="assets\638579-POK0NK-391.jpg" alt="Cover" style="object-fit:cover;
-                        width: 100%;
-                        height: 100%;
-                        border-top-left-radius: 5px;
-                        border-bottom-left-radius: 5px;
-                        border-top-right-radius: 5px;
-                        border-bottom-right-radius: 5px;">
+                        <img src="assets\638579-POK0NK-391.jpg" alt="Cover">
+                        <h4>IBDP Mathematics Unraveled</h4>
+                        <p>A collection of resources focused on IBDP Mathematics</p>
+                        <ul>
+                            <li>Topic Explanations</li>
+                            <li>Topic Specific Questionbanks</li>
+                            <li>Step-based Past Paper Solutions </li>
+                            <li>External Resources</li>
+                        </ul>
                     </div>
                 </div>
             </div>
