--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                     <div class="in-overlay" id="in-over">
                                         <div class="in-overlay-content">
                                             <div class="card-in">
-                                                <span><h4> <b>Sample Text</b> </h4></span>
+                                                <span><h4> <b></b> </h4></span>
                                             </div>
                                         </div>
                                     </div>
