--- a/index.html
+++ b/index.html
@@ -119,11 +119,23 @@
                 <div class="column">
                     <div class="card" id="two">
                         <h4><b>Fucntions and Equations</b></h4>
+                        <ul id="list-f&e">
+                            <li>Polynomials</li>
+                            <li>Graphs</li>
+                            <li>Quadratics</li>
+                            <li>Transformation</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card" id="three">
                         <h4><b>Trigonometry</b></h4>
+                        <ul id="list-trig">
+                            <li>Equations</li>
+                            <li>Identities</li>
+                            <li>Circular functions</li>
+                            <li>Inverse trigonometry</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -131,16 +143,33 @@
                 <div class="column">
                     <div class="card" id="four">
                         <h4><b>Vectors</b></h4>
+                        <ul id="list-vectors">
+                            <li>Vector operations</li>
+                            <li>Line equations</li>
+                            <li>Parametric form</li>
+                            <li>Planes</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card" id="five">
                         <h4><b>Statistics and Probability</b></h4>
+                        <ul id="list-stat">
+                            <li>Probability</li>
+                            <li>Bayes's theorem</li>
+                            <li>Venn diagrams</li>
+                            <li>Probability distributions</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card" id="six">
                         <h4><b>Calculus</b></h4>
+                        <ul id="list-calc">
+                            <li>Differentiation</li>
+                            <li>Integration</li>
+                            <li>Advanced rules</li>
+                        </ul>
                     </div>
                 </div>
             </div>
