Updating to match css

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="column">
                     <div class="card" id="two">
                         <h4><b>Fucntions and Equations</b></h4>
-                        <ul id="list-f&e">
+                        <ul id="list-algebra">
                             <li>Polynomials</li>
                             <li>Graphs</li>
                             <li>Quadratics</li>
@@ -130,7 +130,7 @@
                 <div class="column">
                     <div class="card" id="three">
                         <h4><b>Trigonometry</b></h4>
-                        <ul id="list-trig">
+                        <ul id="list-algebra">
                             <li>Equations</li>
                             <li>Identities</li>
                             <li>Circular functions</li>
@@ -143,7 +143,7 @@
                 <div class="column">
                     <div class="card" id="four">
                         <h4><b>Vectors</b></h4>
-                        <ul id="list-vectors">
+                        <ul id="list-algebra">
                             <li>Vector operations</li>
                             <li>Line equations</li>
                             <li>Parametric form</li>
@@ -154,7 +154,7 @@
                 <div class="column">
                     <div class="card" id="five">
                         <h4><b>Statistics and Probability</b></h4>
-                        <ul id="list-stat">
+                        <ul id="list-algebra">
                             <li>Probability</li>
                             <li>Bayes's theorem</li>
                             <li>Venn diagrams</li>
@@ -165,7 +165,7 @@
                 <div class="column">
                     <div class="card" id="six">
                         <h4><b>Calculus</b></h4>
-                        <ul id="list-calc">
+                        <ul id="list-algebra">
                             <li>Differentiation</li>
                             <li>Integration</li>
                             <li>Advanced rules</li>
