Added link for about page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class="nav-wrapper">
                         <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About</a></li>
+                            <li><a href="pages\about.html">About</a></li>
                             <li><a href="feedback.html">Feedback</a></li>
                             <li><a href="extras.html">Extras</a></li>
                         </ul>
